--- a/conference/LinuxPlumbers2021/xdp-multi-buff.org
+++ b/conference/LinuxPlumbers2021/xdp-multi-buff.org
@@ -135,7 +135,7 @@ enum xdp_buff_flags {
 - [[https://github.com/torvalds/linux/blob/master/samples/pktgen/pktgen_sample03_burst_single_flow.sh][pktgen_sample03_burst_single_flow.sh]] (64B packet size)
 #+ATTR_HTML: :class img-no-border
 [[file:images/xdp-multi-buff-stack.png]]
-** Slide: XDP multi-buffers: new eBPF helpers (1/3)			   :export:
+** Slide: XDP multi-buffers: new eBPF helpers (1/4)			   :export:
 - /bpf_xdp_get_buff_len/:
   - eBPF helper to compute non-lienar buffer length
     - linear + paged
@@ -154,7 +154,7 @@ BPF_CALL_1(bpf_xdp_get_buff_len, struct  xdp_buff*, xdp)
 }
 #+end_src
 
-** Slide: XDP multi-buffers: new eBPF helpers (2/3)			   :export:
+** Slide: XDP multi-buffers: new eBPF helpers (2/4)			   :export:
 - /bpf_xdp_mb_adjust_tail/:
 #+begin_src C
 static int bpf_xdp_mb_adjust_tail(struct xdp_buff *xdp, int offset)
@@ -179,7 +179,7 @@ static int bpf_xdp_mb_adjust_tail(struct xdp_buff *xdp, int offset)
 }
 #+end_src
 
-** Slide: XDP multi-buffers: new eBPF helpers (3/3)			   :export:
+** Slide: XDP multi-buffers: new eBPF helpers (3/4)			   :export:
 - /bpf_xdp_adjust_data/:
 #+begin_src C
 BPF_CALL_2(bpf_xdp_adjust_data, struct xdp_buff *, xdp, u32, offset)
@@ -204,6 +204,28 @@ BPF_CALL_2(bpf_xdp_adjust_data, struct xdp_buff *, xdp, u32, offset)
 }
 #+end_src
 
+** Slide: XDP multi-buffers: new eBPF helpers (4/4)			   :export:
+- /bpf_xdp_adjust_data()/ move data pointers in the selected fragment
+  - *data* and *data_end* must be moved back to the original position
+#+begin_src C
+int _xdp_adjust_frags(struct xdp_md *xdp)
+{
+      __u8 *data_end = (void *)(long)xdp->data_end;
+      __u8 *data = (void *)(long)xdp->data;
+      ... 
+      int base_offset = bpf_xdp_adjust_data(xdp, 5000);
+      ...
+      data_end = (void *)(long)xdp->data_end;
+      data = (void *)(long)xdp->data;
+      ... 
+      if (*data != 0xaa) /* marker */
+            goto out;
+      *data = 0xbb; /* update the marker */
+out:
+      bpf_xdp_adjust_data(xdp, 0);
+      return XDP_PASS;
+}
+#+end_src
 ** Slide: XDP multi-buffers: stack support				   :export:
 - XDP return path
 #+begin_src C
