--- a/conference/LinuxPlumbers2021/xdp-multi-buff.org
+++ b/conference/LinuxPlumbers2021/xdp-multi-buff.org
@@ -84,7 +84,7 @@ XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
-[[https://patchwork.kernel.org/project/netdevbpf/list/?series=544967][Work-in-progress]]
+/Work-in-progress/ upstream [[https://patchwork.kernel.org/project/netdevbpf/list/?series=544967][patchset V14]]
 - xdp_buff and xdp_frame
 - General requirements/proposed solution
 - xdp_adjust_data BPF helper
