LinuxPlumbers2021: XDP does load adaptive bulking
It is a property inherited by the NAPI poll loop.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2021/xdp-multi-buff.org
+++ b/conference/LinuxPlumbers2021/xdp-multi-buff.org
@@ -46,8 +46,8 @@ XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
    - Read, modify, drop, redirect or pass
    - For L2-L3 use-cases: seeing x10 performance improvements!
  - *Avoiding* /memory allocations/
-   - no SKB allocations and no-init (memset zero 4 cache-lines)
- - /Bulk/ processing of frames
+   - No SKB allocations and no-init (memset zero 4 cache-lines)
+ - Adaptive *bulk* processing of frames
  - Very /early access/ to frame (in driver code *after DMA sync*)
  - Ability to */skip/ (large parts) of kernel /code/*
    - Evolve XDP via /BPF-helpers/
